# hermes-aegis

./: .gitignore  ALLOWLIST_FEATURE_SUMMARY.md  ANSWER_BACKEND_QUESTION.md  AUTONOMOUS-PROGRESS.md  AUTONOMOUS-QWEN-SETUP.md  AUTONOMOUS-READY-STATUS.txt  AUTONOMOUS-RESEARCH.md  AUTONOMOUS-STATUS.md  BANNER_INTEGRATION.md  BANNER_TROUBLESHOOTING.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  COMPLETE_INSTALLATION.md  CONTINUOUS-AUTONOMOUS.txt  DEPLOYMENT_READY.md  FINAL-SUMMARY.md  FINAL_ANSWERS.md  FINISH_INSTALLATION.md  HANDOVER-TO-MOONDANCE.md  HANDOVER.md  HERMES-REVIEW.md  IMPLEMENTATION_SUMMARY.md  INSTALL_SIMPLE.md  LICENSE  MVP_READY.md  MVP_SETUP.md  OVERNIGHT-RUN-PROMPT.md  PHASE2_COMPLETE.md  PHASE4-COMPLETION.md  PLAN.md  QUICKSTART.md  QUICK_START.md  README.md  READY_FOR_USE.md  SCHEDULING-VERIFIED.txt  STATUS.md  TASKS.md  TEST-AUTONOMOUS-JOB.md  TIER2-PLAN.md  (+20 more)
.claude/: settings.local.json
.venv_fresh/: pyvenv.cfg
demo/: DEMO_STATUS.md  QUICKSTART.md  README.md  RUN_THIS.txt  attack-scenarios.md  attack_prompts.py  render_demo.py  render_demo_fast.py  render_demo_v2.py  render_part3_from_screenshot.py  render_part3_v2.py  test_single_frame.py
demo_versions/: compare.html
docs/: AUTONOMOUS-CONFIGURATION.md  AUTONOMOUS-PROMPTS.md  AUTONOMOUS-STRATEGY.md  BACKEND_CLARIFICATION.md  BENCHMARK-HANDOVER.md  DANGEROUS-COMMAND-MIDDLEWARE.md  DANGEROUS_BLOCKING.md  DOCKER-RUNTIME-TESTING.md  FOR_HERMES_AGENT.md  HERMES-LESSONS.md  PLAN-IMPROVEMENTS.md  SCENARIO_WALKTHROUGH.md  SSH-DEFENSE-HANDOVER.md  TEST-ATTACK-SCENARIOS.md  TESTING-GAPS.md  TIER_SELECTION.md  WHY-WE-DONT-BLOCK.md  allowlist.md  reactive-agents.md
docs/archive/: BEFORE-AFTER-TESTS.md  DESIGN.md  FINAL-ANALYSIS.md  HANDOFF-TO-QWEN.md  IMPLEMENTATION-PLAN.md  INSTALLATION.md  NEW_BEHAVIOR.md  NOTES.md  PERFORMANCE-ANALYSIS.md  SCOPE-ANALYSIS.md  STATUS.txt  TASKS.md  TIER2-COMPLETION.md  TIER2-GAPS.md  USER_SETUP_GUIDE.md
examples/: dangerous_blocking_demo.py
plugins/hermes-aegis/: README.md  __init__.py  _deps.py  patterns.py  plugin.yaml  state.py
proxy/: runner.py
scripts/: validate-install.sh
soundtracks/: generate.py  generate_minimal.py
src/hermes_aegis/: __init__.py  cli.py  detect.py  display.py  environment.py  honcho_sidecar.py  hook.py  integration.py  migration.py  patches.py  utils.py
tests/: test_addon_injection.py  test_aegis_environment.py  test_allowlist.py  test_allowlist_integration.py  test_approval_backends.py  test_approval_cache.py  test_audit_event.py  test_audit_summary.py  test_auth_bridge.py  test_benchmarks.py  test_cli_audit.py  test_cli_commands.py  test_cli_run.py  test_container.py  test_container_handshake.py  test_dangerous_blocking.py  test_dangerous_logging.py  test_default_chain.py  test_detectors.py  test_docker_cleanup.py  test_docker_config_hardening.py  test_file_write_scanner.py  test_hermes_config.py  test_hook.py  test_injector.py  test_integration.py  test_keyring.py  test_lan_allowlist.py  test_middleware.py  test_migrate.py  test_migration.py  test_oauth_credential_guard.py  test_output_scanner.py  test_patches.py  test_patterns.py  test_phase5.py  test_policy_core.py  test_policy_phase2.py  test_provider_presets.py  test_proxy.py  (+23 more)
tests/audit/: test_trail.py
tests/benchmark/: evil_server.py  harness.py  red_team.py  run.sh  (+3 more)
(+105 files in other folders)
