[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-aegis"
version = "0.1.0"
description = "Security hardening layer for Hermes Agent"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "docker>=7.1.0",
    "keyring>=24.0",
    "nest_asyncio>=1.5",
    "requests>=2.32.5",
    "responses>=0.26.0",
]

[project.optional-dependencies]
tier2 = [
    "docker>=7.0",
    "mitmproxy>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
hermes-aegis = "hermes_aegis.cli:main"
