[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-aegis"
version = "0.2.0"
description = "Security hardening layer for Hermes Agent"
authors = [{name = "Tranquil-Flow", email = "tranquil_flow@protonmail.com"}]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "keyring>=24.0",
    "mitmproxy>=10.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
container = ["docker>=7.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0",
    "responses>=0.26.0",
    "docker>=7.0",
]
demo = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[project.scripts]
hermes-aegis = "hermes_aegis.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "src/hermes_aegis/**",
    "plugins/hermes-aegis/**",
    "tests/**",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
    ".pytest_cache/**",
    "dist/**",
    "output/**",
    "soundtracks/**",
    "render_output.log",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_aegis"]

[tool.hatch.build.targets.wheel.force-include]
"plugins/hermes-aegis/README.md" = "plugins/hermes-aegis/README.md"
"plugins/hermes-aegis/plugin.yaml" = "plugins/hermes-aegis/plugin.yaml"
"plugins/hermes-aegis/__init__.py" = "plugins/hermes-aegis/__init__.py"
"plugins/hermes-aegis/_deps.py" = "plugins/hermes-aegis/_deps.py"
"plugins/hermes-aegis/patterns.py" = "plugins/hermes-aegis/patterns.py"
"plugins/hermes-aegis/state.py" = "plugins/hermes-aegis/state.py"
"plugins/hermes-aegis/aegis_core" = "plugins/hermes-aegis/aegis_core"
"plugins/hermes-aegis/dashboard" = "plugins/hermes-aegis/dashboard"
"plugins/hermes-aegis/hooks" = "plugins/hermes-aegis/hooks"
